--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         target="_blank">Laptops</a></li>
                 <li><a href="https://pwa.abenson-shop.online/mobile/smartphone/shipping-group/po-apple.html"
                         target="_blank">Mobile</a></li>
+                <li><a href="printerFAQ.html">Printer</a></li>
                 <li><a href="refFAQ.html" target="_blank">Ref</a></li>
                 <li><a href="sofaFAQ.html" target="_blank">Sofa</a></li>
                 <li><a href="tvFAQ.html" target="_blank">TV</a></li>
@@ -29,7 +30,7 @@
             </ul>
         </nav>
 
-    </main>
+    </main>`
 </body>
 
 <style>
