--- a/washerFAQ.html
+++ b/washerFAQ.html
@@ -25,7 +25,7 @@
     <!-- style="display: none;" -->
     <section id="faq-section">
         <div class="faq-section_header">
-            <h2>Frequently Asked Question</h2>
+            <h2>Frequently Asked Questions</h2>
             <p>Here are quick answers to questions shoppers ask the most.</p>
         </div>
 
@@ -496,80 +496,80 @@
 
     <!-- JS: Move FAQ and generate JSON-LD -->
     <script type="text/simi-script">
-    (function initFAQ() {
-        const faq = document.querySelector("#faq-section");
-        if (!faq) return;
+(function initFAQ() {
+    const faq = document.querySelector("#faq-section");
+    if (!faq) return;
 
-        function moveFAQ() {
-            const productsContainer = document.querySelector(".category-products-UCL");
-            if (!productsContainer) return false;
+    function moveFAQ() {
+        const productsContainer = document.querySelector(".category-products-UCL");
+        if (!productsContainer) return false;
 
-            if (faq.dataset.moved === "true") return true;
+        if (faq.dataset.moved === "true") return true;
 
-            // Move FAQ below products container
-            productsContainer.insertAdjacentElement("afterend", faq);
-            faq.dataset.moved = "true";
-            faq.style.display = "block";
+        // Move FAQ below products container
+        productsContainer.insertAdjacentElement("afterend", faq);
+        faq.dataset.moved = "true";
+        faq.style.display = "block";
 
-            console.log("FAQ section moved successfully");
+        console.log("FAQ section moved successfully");
 
-            // Generate dynamic JSON-LD
-            const faqItems = faq.querySelectorAll(".faq-item");
-            if (faqItems.length) {
-                const faqData = {
-                    "@context": "https://schema.org",
-                    "@type": "FAQPage",
-                    "mainEntity": []
-                };
+        // Generate dynamic JSON-LD
+        const faqItems = faq.querySelectorAll(".faq-item");
+        if (faqItems.length) {
+            const faqData = {
+                "@context": "https://schema.org",
+                "@type": "FAQPage",
+                "mainEntity": []
+            };
 
-                faqItems.forEach(item => {
-                    const question = item.querySelector(".faq-question span").textContent.trim();
+            faqItems.forEach(item => {
+                const question = item.querySelector(".faq-question span").textContent.trim();
 let answerEl = item.querySelector(".faq-answer p");
 if (!answerEl) {
-    // fallback: take all text in .faq-answer
-    answerEl = item.querySelector(".faq-answer");
+// fallback: take all text in .faq-answer
+answerEl = item.querySelector(".faq-answer");
 }
 const answer = answerEl ? answerEl.textContent.trim() : "";
-                 //   const answer = item.querySelector(".faq-answer p").textContent.trim();
+                //   const answer = item.querySelector(".faq-answer p").textContent.trim();
 
-                    if (question && answer) {
-                        faqData.mainEntity.push({
-                            "@type": "Question",
-                            "name": question,
-                            "acceptedAnswer": {
-                                "@type": "Answer",
-                                "text": answer
-                            }
-                        });
-                    }
-                });
-
-                const script = document.createElement("script");
-                script.type = "application/ld+json";
-                script.text = JSON.stringify(faqData);
-                document.head.appendChild(script);
-
-                console.log("FAQ structured data added");
-            }
-
-            return true;
-        }
-
-        // Try to move immediately
-        if (!moveFAQ()) {
-            const observer = new MutationObserver(() => {
-                if (moveFAQ()) observer.disconnect();
+                if (question && answer) {
+                    faqData.mainEntity.push({
+                        "@type": "Question",
+                        "name": question,
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": answer
+                        }
+                    });
+                }
             });
-            observer.observe(document.body, { childList: true, subtree: true });
+
+            const script = document.createElement("script");
+            script.type = "application/ld+json";
+            script.text = JSON.stringify(faqData);
+            document.head.appendChild(script);
+
+            console.log("FAQ structured data added");
         }
 
-        // Re-run on Magento SPA/AJAX-like events
-        document.addEventListener("contentUpdated", moveFAQ);
-        document.addEventListener("page:loaded", moveFAQ);
-        document.addEventListener("product-list-rendered", moveFAQ);
-        window.addEventListener("popstate", moveFAQ);
+        return true;
+    }
 
-    })();
+    // Try to move immediately
+    if (!moveFAQ()) {
+        const observer = new MutationObserver(() => {
+            if (moveFAQ()) observer.disconnect();
+        });
+        observer.observe(document.body, { childList: true, subtree: true });
+    }
+
+    // Re-run on Magento SPA/AJAX-like events
+    document.addEventListener("contentUpdated", moveFAQ);
+    document.addEventListener("page:loaded", moveFAQ);
+    document.addEventListener("product-list-rendered", moveFAQ);
+    window.addEventListener("popstate", moveFAQ);
+
+})();
 </script>
 </body>
 
