--- a/tvFAQ.html
+++ b/tvFAQ.html
@@ -45,7 +45,8 @@
                     </p>
 
                     <p>For a more detailed recommendation, view our TV buyer’s guide here: <a
-                            href="/electronics/tv/tv-buyers-guide.html">https://www.abenson.com/electronics/tv/tv-buyers-guide.html</a>
+                            href="/buyers-guide/tv"></a>
+                        www.abenson.com/buyers-guide/tv</a>
                     </p>
                 </div>
             </div>
@@ -248,8 +249,8 @@
             <!--  -->
 
             <div class="faq-item">
-                <input type="checkbox" id="faq10">
-                <label class="faq-question" for="faq10">
+                <input type="checkbox" id="faq11">
+                <label class="faq-question" for="faq11">
                     <span>What TV brands can I shop at Abenson?</span>
                     <span class="icon"></span>
                 </label>
